fixed textarea white space and added etsy button

--- a/partials/_base.scss
+++ b/partials/_base.scss
@@ -67,8 +67,6 @@ nav {
 	}
 
 	a {
-		font-size: 20px;
-		color: $brown;
 		position: relative;
 		text-decoration: none;
 		padding-bottom: 8px;
