--- a/partials/_consultation.scss
+++ b/partials/_consultation.scss
@@ -6,5 +6,13 @@
 	p {
 		width: 60%;
 		margin: 50px 0 0;
+
+		a {
+			transition: .3s;
+			
+			&:hover {
+				color: $primaryColor
+			}
+		}
 	}
 }
