--- a/styles/style.css
+++ b/styles/style.css
@@ -256,8 +256,6 @@ nav ul li {
 }
 
 nav a {
-  font-size: 20px;
-  color: #584E4A;
   position: relative;
   text-decoration: none;
   padding-bottom: 8px;
@@ -367,6 +365,15 @@ footer a:hover {
   margin: 50px 0 0;
 }
 
+.consultation p a {
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.consultation p a:hover {
+  color: #f9cb4d;
+}
+
 .contact {
   width: 100%;
   height: 100vh;
@@ -381,6 +388,15 @@ footer a:hover {
   margin: 50px 0 0;
 }
 
+.contact p:first-of-type a {
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.contact p:first-of-type a:hover {
+  color: #f9cb4d;
+}
+
 .contact .contactForm {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -392,8 +408,11 @@ footer a:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 25%;
   margin: 30px;
 }
@@ -420,7 +439,7 @@ footer a:hover {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  width: 25%;
+  width: 40%;
   padding: 30px;
 }
 
@@ -435,6 +454,7 @@ footer a:hover {
   -webkit-box-align: space-between;
       -ms-flex-align: space-between;
           align-items: space-between;
+  width: 100%;
   padding: 0;
   border: none;
 }
@@ -442,25 +462,18 @@ footer a:hover {
 .contact form input {
   height: 40px;
   padding-left: 15px;
-  margin-bottom: 10px;
+  margin: 0 0 10px;
   border: 2px solid #272727;
   border-radius: 0;
 }
 
-.contact form input:first-of-type {
-  width: 100%;
-}
-
-.contact form input:last-of-type {
-  width: 100%;
-}
-
 .contact form .textareaBox {
+  width: 100%;
   margin-bottom: 20px;
 }
 
 .contact form .textareaBox textarea {
-  height: 100px;
+  height: 150px;
   width: 100%;
   padding-left: 15px;
   border: 2px solid #272727;
